--- a/style/style.css
+++ b/style/style.css
@@ -4,10 +4,16 @@
   font-weight: 400;
   font-family: "Inter", sans-serif;
   font-family: "Poppins", sans-serif;
+  line-height: 1.3;
+}
+
+html,
+body {
+  height: 100%;
 }
 :root {
   --links: white;
-  --bgc:#151515;
+  --bgc: #151515;
 }
 *,
 *::after,
@@ -21,6 +27,12 @@ ul {
 }
 a {
   text-decoration: none;
+  color: var(--links);
+}
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 .container {
   max-width: 1220px;
@@ -35,17 +47,92 @@ a {
   align-items: flex-end;
 }
 .header {
-    background-color: var(--bgc);
+  background-color: var(--bgc);
 }
 .header-main {
-    /* background-color: transparent; */
+  background-color: transparent;
 }
 .menu__list {
   display: flex;
   gap: 35px;
 }
 .menu__link {
-  color: var(--links);
   text-transform: uppercase;
   font-weight: 700;
+}
+
+/* main */
+
+.main {
+  flex-grow: 1;
+}
+.top {
+  color: var(--links);
+  text-align: center;
+  padding-bottom:50px ;
+}
+.title {
+  padding-top: 105px;
+  padding-bottom: 40px;
+  font-size: 96px;
+  font-weight: 700;
+}
+.top__link {
+  background-color: var(--bgc);
+  padding: 23px;
+  max-width: 420px;
+  display: inline-block;
+  font-size: 26px;
+  font-weight: 700;
+  width: 100%;
+}
+
+.swiper-slide {
+  height: 100vh;
+}
+/* footer */
+.footer {
+  background-color: var(--bgc);
+  color: var(--links);
+  padding-top: 50px;
+}
+.footer__menu {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 50px;
+}
+.footer__menu-list {
+  max-width: 250px;
+}
+.footer__menu-title {
+  font-size: 24px;
+  font-weight: 700;
+  padding-bottom: 20px;
+}
+.footer__menu-item + .footer__menu-item {
+  padding-top: 20px;
+}
+.app {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  margin-bottom: 40px;
+}
+.footer__copy {
+  margin: 0 auto;
+  text-align: center;
+  max-width: 830px;
+  margin-bottom: 40px;
+}
+.footer__copy-text {
+  font-size: 12px;
+  margin-bottom: 40px;
+}
+.small {
+  padding-bottom: 20px;
+}
+.small__menu {
+  display: flex;
+  gap: 40px;
+  justify-content: center;
 }
