--- a/style/style.css
+++ b/style/style.css
@@ -64,6 +64,9 @@ a {
   text-transform: uppercase;
   font-weight: 700;
 }
+.menu__link--active {
+  color: #06f;
+}
 
 /* main */
 
@@ -286,6 +289,45 @@ a {
   padding: 10px 50px;
   font-size: 24px;
   margin: 0 auto;
+}
+
+/* BLOG */
+.blog{
+  padding-bottom: 50px;
+}
+.blog__items{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+.blog__item {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.blog__img{
+  margin-bottom: 20px;
+  width: 100%;
+}
+.blog__title {
+  font-size: 20px;
+  font-weight: 600;
+  flex-basis: 440px;
+}
+.blog__link{
+  background-color: #06f;
+  padding: 4px 20px;
+}
+.blog__btn{
+  width: 200px;
+  height: 50px;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+.blog__btn2{
+  text-align: center;
+  padding: 10px 40px;
+  background-color: var(--bgc);
 }
 /* footer */
 .footer {
