--- a/style/style.css
+++ b/style/style.css
@@ -129,9 +129,6 @@ a {
 }
 
 /* why lease */
-.why-lease {
-  padding: 50px 0;
-}
 .title {
   margin-bottom: 50px;
   font-size: 46px;
@@ -221,8 +218,6 @@ a {
 .video__content {
   display: block;
   margin: 0 auto;
-  width: 100%;
-  margin: 0 20px;
 }
 
 /* important */
@@ -364,6 +359,7 @@ a {
 }
 .card__img {
   margin-bottom: 10px;
+  width: 100%;
 }
 .card__title,
 .card__price {
@@ -450,6 +446,13 @@ a {
   .important__img {
     width: 100%;
   }
+  .video__content {
+    width: 100%;
+    margin: 10px;
+  }
+  .tab__content--item{
+    grid-template-columns: repeat(3,1fr);
+  }
 }
 @media (max-width: 860px) {
   .important__list {
@@ -465,7 +468,8 @@ a {
   .menu__btn {
     display: flex;
   }
-  .menu__btn, .logo{
+  .menu__btn,
+  .logo {
     position: relative;
     z-index: 6;
   }
@@ -482,8 +486,96 @@ a {
     height: 100vh;
     padding-top: 100px;
     transform: translateY(-100%);
+    transition: transform 0.3s ease;
   }
-  .menu__list.activeMenu{
-    transform: translateY(0%)
+  .menu__list.activeMenu {
+    transform: translateY(0%);
+  }
+  .tab__content--item{
+    grid-template-columns: repeat(2,1fr);
+  }
+}
+@media (max-width: 760px) {
+  .footer__menu {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+    text-align: center;
+    margin-left: 30px;
+  }
+  .footer__menu-list {
+    max-width: 200px;
+  }
+  .video__content {
+    height: 400px;
+  }
+  .swiper-pagination-bullet {
+    width: 60px;
+  }
+  .tabs__btn--item{
+    font-size: 14px;
+  }
+  .blog__items{
+    grid-template-columns: repeat(1,1fr);
+  }
+}
+@media (max-width: 540px) {
+  .title {
+    font-size: 30px;
+    margin-bottom: 10px;
+  }
+  .video__content {
+    height: 200px;
+  }
+  .footer__menu-title {
+    font-size: 16px;
+  }
+  .why-lease__list {
+    grid-template-columns: repeat(1, 1fr);
+    text-align: center;
+  }
+  .lease-work__item {
+    max-width: 200px;
+    text-align: center;
+    padding: 8px 130px 8px 80px;
+  }
+  .copy__links {
+    font-size: 10px;
+  }
+  .lease-work {
+    padding-bottom: 0;
+  }
+  .video {
+    padding-bottom: 0;
+  }
+  .important__list {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .lease-work__item::before {
+    font-size: 24px;
+    height: 50px;
+    width: 50px;
+  }
+  .tab__content--item{
+    grid-template-columns: repeat(1,1fr);
+  }
+  .blog__title{
+    font-size: 14px;
+  }
+  .blog__link{
+    font-size: 14px;
+    padding: 4px 10px;
+  }
+  .tabs__btn {
+    flex-direction: column;
+  }
+  .tabs__btn--item{
+    font-size: 18px;
+  }
+  .contact__text{
+    font-size: 12px;
+  }
+  .input{
+    width: 100%;
   }
 }
